--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- Animate CSS -->
     <link href="css/animate.min.css" rel="stylesheet">
+ 	<!-- font awesome cdn -->
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/v-1/main.css" rel="stylesheet">
