Added particles.js file

--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
     <script src="js/main.js"></script>
     <script src="js/animated-headline.js"></script>
     <!-- Particles -->
-    <script src="particles.js"></script>
+    <script src="js/particles.js"></script>
     <script>
         /* particlesJS.load(@dom-id, @path-json, @callback (optional)); */
         particlesJS.load('particles-js', 'assets/particles.json', function() {
