--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                 <div class="col-md-3 col-sm-3">
                     <figure class="big-img wow zoomIn">
                         <a href="#" data-toggle="modal" data-target="#teamModal">
-                        	<img src="img/team/abhi.jpg">
+                        	<img src="img/team/abhinav.jpg">
                             <figcaption>
                                 <h4>Abhinav Handa</h4>
                                 <p>Art Director</p>
