--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             </div>
 
             <div class="row text-center">
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-3 col-sm-3">
                     <figure class="big-img wow zoomIn">
                         <a href="#" data-toggle="modal" data-target="#teamModal">
                         	<img src="img/team/jagjeet.jpg">
@@ -369,7 +369,7 @@
                         </a>
                     </figure>
                 </div>
-                <div class="col-md-4 col-sm-4">
+                <div class="col-md-3 col-sm-3">
                     <figure class="big-img wow zoomIn">
                         <a href="#" data-toggle="modal" data-target="#teamModal">
                         	<img src="img/team/amrit.jpg">
@@ -562,14 +562,7 @@
                             <p class="item-intro text-muted">Chief Executive Officer</p>
                             <img class="img-responsive" src="img/team/jagjeet.jpg" alt="GeckPro">
                             <p>A thinker, a doer, and a real Rasta man, Jagjeet is almost as addicted to reggae as he is to inventive technology. If you don’t see him behind a screen, you might see him behind a camera.</p>
-                            <h1>H1 : Quisque non semper justo</h1>
-							<h2>H2 : Quisque non semper justo</h2>
-							<h3>H3 : Quisque non semper justo</h3>
-							<h4>H4 : Quisque non semper justo</h4>
-							<h5>H5 : Quisque non semper justo</h5>
-							<h6>H6 : Quisque non semper justo</h6>
-							<p>Nunc pellentesque mauris ut magna pulvinar, quis fermentum tellus pulvinar. Curabitur ut fermentum quam. Nam tincidunt sagittis neque in elementum. Fusce convallis cursus porta. Curabitur dapibus pretium leo, at laoreet magna ullamcorper ac. Integer quam nulla, fringilla ac imperdiet at, consequat vel leo. Quisque non semper justo, eu aliquam velit. Pellentesque rhoncus, quam ac fringilla euismod, ligula diam congue orci, id cursus dui velit quis ligula.</p>
-                          	</div>
+                                                      	</div>
                     </div>
                 </div>
             </div>
@@ -581,15 +574,7 @@
                             <h2>Amritpal Singh</h2>
                             <p class="item-intro text-muted">Technical Head</p>
                             <img class="img-responsive" src="img/team/amrit.jpg" alt="GeckPro">
-                            <p>The Techinical guru ji of of our team. It’s Amrit’s job to keep things running smoothly. With a sharp mind and an organized personality, he navigates his way through the Labyrinth of life.</p>
-                            <h1>H1 : Quisque non semper justo</h1>
-							<h2>H2 : Quisque non semper justo</h2>
-							<h3>H3 : Quisque non semper justo</h3>
-							<h4>H4 : Quisque non semper justo</h4>
-							<h5>H5 : Quisque non semper justo</h5>
-							<h6>H6 : Quisque non semper justo</h6>
-							<p>Nunc pellentesque mauris ut magna pulvinar, quis fermentum tellus pulvinar. Curabitur ut fermentum quam. Nam tincidunt sagittis neque in elementum. Fusce convallis cursus porta. Curabitur dapibus pretium leo, at laoreet magna ullamcorper ac. Integer quam nulla, fringilla ac imperdiet at, consequat vel leo. Quisque non semper justo, eu aliquam velit. Pellentesque rhoncus, quam ac fringilla euismod, ligula diam congue orci, id cursus dui velit quis ligula.</p>
-                                                 </div>
+                            <p>The Techinical guru ji of of our team. It’s Amrit’s job to keep things running smoothly. With a sharp mind and an organized personality, he navigates his way through the Labyrinth of life.</p>                                                 </div>
                     			</div>
                 		</div>
             		</div>
@@ -602,13 +587,6 @@
                             <p class="item-intro text-muted">Developer and Analyst</p>
                             <img class="img-responsive" src="img/team/gurnoor.jpg" alt="GeckPro">
                             <p>Gurnoor is a passionate coder, drumer, innovative, moviebuff and damn secretive individual. He loves to spend his downtime playing video games and watching all kinds of movies.</p>
-                            <h1>H1 : Quisque non semper justo</h1>
-							<h2>H2 : Quisque non semper justo</h2>
-							<h3>H3 : Quisque non semper justo</h3>
-							<h4>H4 : Quisque non semper justo</h4>
-							<h5>H5 : Quisque non semper justo</h5>
-							<h6>H6 : Quisque non semper justo</h6>
-							<p>Nunc pellentesque mauris ut magna pulvinar, quis fermentum tellus pulvinar. Curabitur ut fermentum quam. Nam tincidunt sagittis neque in elementum. Fusce convallis cursus porta. Curabitur dapibus pretium leo, at laoreet magna ullamcorper ac. Integer quam nulla, fringilla ac imperdiet at, consequat vel leo. Quisque non semper justo, eu aliquam velit. Pellentesque rhoncus, quam ac fringilla euismod, ligula diam congue orci, id cursus dui velit quis ligula.</p>
                         	 </div>
                     </div>
                 </div>
@@ -620,15 +598,9 @@
                             <!-- Project Details Go Here -->
                             <h2>Abhinav Handa</h2>
                             <p class="item-intro text-muted">Art Director</p>
-                            <img class="img-responsive" src="img/team/abhi.jpg" alt="GeckPro">
+                            <img class="img-responsive" src="img/team/abhinav.jpg" alt="GeckPro">
                             <p>The vitamin C of our team, Abhinav picks up the team with his bright vibe and ready-to-go jokes. This dashing creature is always happy, and we challenge anyone to remain grumpy in his presence. They will fail.</p>
-                            <h1>H1 : Quisque non semper justo</h1>
-							<h2>H2 : Quisque non semper justo</h2>
-							<h3>H3 : Quisque non semper justo</h3>
-							<h4>H4 : Quisque non semper justo</h4>
-							<h5>H5 : Quisque non semper justo</h5>
-							<h6>H6 : Quisque non semper justo</h6>
-							<p>Nunc pellentesque mauris ut magna pulvinar, quis fermentum tellus pulvinar. Curabitur ut fermentum quam. Nam tincidunt sagittis neque in elementum. Fusce convallis cursus porta. Curabitur dapibus pretium leo, at laoreet magna ullamcorper ac. Integer quam nulla, fringilla ac imperdiet at, consequat vel leo. Quisque non semper justo, eu aliquam velit. Pellentesque rhoncus, quam ac fringilla euismod, ligula diam congue orci, id cursus dui velit quis ligula.</p>
+                            
                             <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
