created modals for individuals

--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             <div class="row text-center">
                 <div class="col-md-3 col-sm-3">
                     <figure class="big-img wow zoomIn">
-                        <a href="#" data-toggle="modal" data-target="#teamModal">
+                        <a href="#" data-toggle="modal" data-target="#teamModalJagjeet">
                         	<img src="img/team/jagjeet.jpg">
                             <figcaption>
                                 <h4>Jagjeet SIngh</h4>
@@ -371,11 +371,11 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <figure class="big-img wow zoomIn">
-                        <a href="#" data-toggle="modal" data-target="#teamModal">
+                        <a href="#" data-toggle="modal" data-target="#teamModalAmrit">
                         	<img src="img/team/amrit.jpg">
                             <figcaption>
                                 <h4>Amritpal Singh</h4>
-				<p>Technical Head</p>
+				                    <p>Technical Head</p>
                                 <div class="team-social-icon">
                                     <a href="#"><i class="fa fa-twitter"></i></a>
                                     <a href="https://www.facebook.com/amrit3701"><i class="fa fa-facebook"></i></a>
@@ -387,7 +387,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <figure class="big-img wow zoomIn">
-                        <a href="#" data-toggle="modal" data-target="#teamModal">
+                        <a href="#" data-toggle="modal" data-target="#teamModalGurnoor">
                         	<img src="img/team/gurnoor.jpg">
                             <figcaption>
                                 <h4>Gurnoor SIngh</h4>
@@ -403,7 +403,7 @@
                 </div>
                 <div class="col-md-3 col-sm-3">
                     <figure class="big-img wow zoomIn">
-                        <a href="#" data-toggle="modal" data-target="#teamModal">
+                        <a href="#" data-toggle="modal" data-target="#teamModalAbhinav">
                         	<img src="img/team/abhinav.jpg">
                             <figcaption>
                                 <h4>Abhinav Handa</h4>
@@ -608,6 +608,112 @@
             </div>
         </div>
     </div>
+
+
+    <!-- Jagjeet's Modal -->
+    <div class="team-modal modal fade" id="teamModalJagjeet" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-md-push-1 co-sm-12 col-sm-push-0">
+                        <div class="modal-body">
+                             <!-- Project Details Go Here -->
+                            <h2>Jagjeet Singh</h2>
+                            <p class="item-intro text-muted">Chief Executive Officer</p>
+                            <img class="img-responsive" src="img/team/jagjeet.jpg" alt="GeckPro">
+                            <p>A thinker, a doer, and a real Rasta man, Jagjeet is almost as addicted to reggae as he is to inventive technology. If you don’t see him behind a screen, you might see him behind a camera.</p>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Close Profile</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Amritpal's Modal -->
+    <div class="team-modal modal fade" id="teamModalAmrit" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-md-push-1 co-sm-12 col-sm-push-0">
+                        <div class="modal-body">
+                             <!-- Project Details Go Here -->
+                            <h2>Amritpal Singh</h2>
+                            <p class="item-intro text-muted">Technical Head</p>
+                            <img class="img-responsive" src="img/team/amrit.jpg" alt="GeckPro">
+                            <p>The Techinical guru ji of of our team. It’s Amrit’s job to keep things running smoothly. With a sharp mind and an organized personality, he navigates his way through the Labyrinth of life.</p>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Close Profile</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Gurnoor's Modal -->
+    <div class="team-modal modal fade" id="teamModalGurnoor" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-md-push-1 co-sm-12 col-sm-push-0">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Gurnoor Singh</h2>
+                            <p class="item-intro text-muted">Developer and Analyst</p>
+                            <img class="img-responsive" src="img/team/gurnoor.jpg" alt="GeckPro">
+                            <p>Gurnoor is a passionate coder, drumer, innovative, moviebuff and damn secretive individual. He loves to spend his downtime playing video games and watching all kinds of movies.</p>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Close Profile</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Abhinav's Modal -->
+    <div class="team-modal modal fade" id="teamModalAbhinav" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 col-md-push-1 co-sm-12 col-sm-push-0">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Abhinav Handa</h2>
+                            <p class="item-intro text-muted">Art Director</p>
+                            <img class="img-responsive" src="img/team/abhinav.jpg" alt="GeckPro">
+                            <p>The vitamin C of our team, Abhinav picks up the team with his bright vibe and ready-to-go jokes. This dashing creature is always happy, and we challenge anyone to remain grumpy in his presence. They will fail.</p>
+                            <button type="button" class="btn btn-xl" data-dismiss="modal"><i class="fa fa-times"></i> Close Profile</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 
 
