company logo's added

--- a/index.html
+++ b/index.html
@@ -331,11 +331,10 @@
             <div class="row">
             	<div class="col-md-12">
             		<div class="brand-logos">
-            			<a href="#"><img class="desaturate" src="img/logos/logo-1.png"></a>
-                        <a href="#"><img class="desaturate" src="img/logos/logo-2.png"></a>
-                        <a href="#"><img class="desaturate" src="img/logos/logo-3.png"></a>
-                        <a href="#"><img class="desaturate" src="img/logos/logo-4.png"></a>
-                        <a href="#"><img class="desaturate" src="img/logos/logo-5.png"></a>
+            			<a href="http://shinecoachings.com"><img class="desaturate" src="img/logos/shine.png"></a>
+                        <a href="http://aeoneducreation.com"><img class="desaturate" src="img/logos/aeon.png"></a>
+                        <a href="https://anandep.com"><img class="desaturate" src="img/logos/anandep.png"></a>
+                        
             		</div>
             	</div>
             </div>
