added anandep image

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <!-- Portfolio 1 -->
                     <div class="col-md-4 col-sm-6 mix web_design" data-myorder="1">
                         <figure class="wow zoomIn">
-                            <img src="img/portfolio/portfolio-1.jpg">
+                            <img src="img/portfolio/anandep2.png">
                             <a href="#" data-toggle="modal" data-target="#portfolioModal">
                                 <figcaption>
                                     <div class="portfolio-icon"><i class="fa fa-search"></i></div>
