Update portfolio images

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <!-- Portfolio 1 -->
                     <div class="col-md-4 col-sm-6 mix web_design" data-myorder="1">
                         <figure class="wow zoomIn">
-                            <img src="img/portfolio/anandep2.png">
+                            <img src="img/portfolio/anandep.png">
                             <a href="#" data-toggle="modal" data-target="#portfolioModal">
                                 <figcaption>
                                     <div class="portfolio-icon"><i class="fa fa-search"></i></div>
@@ -193,7 +193,7 @@
 
                     <div class="col-md-4 col-sm-6 mix logo" data-myorder="2">
                         <figure class="wow zoomIn">
-                            <img src="img/portfolio/portfolio-2.jpg">
+                            <img src="img/portfolio/shine.png">
                             <a href="#" data-toggle="modal" data-target="#portfolioModal">
                                 <figcaption>
                                     <div class="portfolio-icon"><i class="fa fa-search"></i></div>
@@ -206,7 +206,7 @@
 
                     <div class="col-md-4 col-sm-6 mix illustration" data-myorder="3">
                         <figure class="wow zoomIn">
-                            <img src="img/portfolio/portfolio-3.jpg">
+                            <img src="img/portfolio/aeon.png">
                             <a href="#" data-toggle="modal" data-target="#portfolioModal">
                                 <figcaption>
                                     <div class="portfolio-icon"><i class="fa fa-search"></i></div>
