Removed context in portfolio section

--- a/index.html
+++ b/index.html
@@ -171,12 +171,12 @@
             <div class="row text-center">
                 <div id="portfolio-items">
                     <!-- Mixtup Controllar -->
-                    <div class="controls text-center portfolio-filters">
+                    <!--<div class="controls text-center portfolio-filters">
                         <a class="filter btn btn-primary" data-filter="all">all</a>
                         <a class="filter btn btn-primary" data-filter=".web_design">web design</a>
                         <a class="filter btn btn-primary" data-filter=".logo">logo</a>
                         <a class="filter btn btn-primary" data-filter=".illustration">illustration</a>
-                    </div>
+                    </div>-->
                     <!-- Portfolio 1 -->
                     <div class="col-md-4 col-sm-6 mix web_design" data-myorder="1">
                         <figure class="wow zoomIn">
@@ -216,7 +216,7 @@
                             </a>
                         </figure>
                     </div>
-
+                    <!--
                     <div class="col-md-4 col-sm-6 mix logo" data-myorder="4">
                         <figure class="wow zoomIn">
                             <img src="img/portfolio/portfolio-4.jpg">
@@ -255,7 +255,7 @@
                             </a>
                         </figure>
                     </div>
-
+                    -->
                 </div>
             </div>
         </div>
