--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                     </div>
                 </div>
                 <div class="col-md-10 col-md-push-1 col-sm-12 col-sm-push-0 wow fadeInUp text-center">
-                    <img src="img/side-4.png" class="img-margin-center" alt="geckpro">
+                    <!--img src="img/side-4.png" class="img-margin-center" alt="geckpro"-->
                 </div>
             </div>
         </div>
@@ -359,7 +359,7 @@
                                 <h4>Jagjeet SIngh</h4>
                                 <p>Executive Head</p>
                                 <div class="team-social-icon">
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    <!--a href="#"><i class="fa fa-twitter"></i></a-->
                                     <a href="https://www.facebook.com/iamjagjeetubhi"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-linkedin"></i></a>
                                 </div>
@@ -375,7 +375,7 @@
                                 <h4>Amritpal Singh</h4>
 				                    <p>Technical Head</p>
                                 <div class="team-social-icon">
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    <!--a href="#"><i class="fa fa-twitter"></i></a-->
                                     <a href="https://www.facebook.com/amrit3701"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-linkedin"></i></a>
                                 </div>
@@ -386,14 +386,14 @@
                 <div class="col-md-3 col-sm-3">
                     <figure class="big-img wow zoomIn">
                         <a href="#" data-toggle="modal" data-target="#teamModalGurnoor">
-                        	<img src="img/team/gurnoor.jpg">
+                        	<img src="img/team/gurnoor1.jpg">
                             <figcaption>
-                                <h4>Gurnoor SIngh</h4>
+                                <h4>Gurnoor Singh</h4>
                                 <p>Developer and Analyst</p>
                                 <div class="team-social-icon">
-                                    <a href="#"><i class="fa fa-twitter"></i></a>
+                                    <!--a href="#"><i class="fa fa-twitter"></i></a-->
                                     <a href="https://www.facebook.com/gurnoor.singh.7731"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/gurnoor-singh-699a6397"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </figcaption>
                         </a>
