--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                 <div class="col-md-4col-sm-4 text-center">
                     <i class="fa fa-envelope"></i>
                     <h1 class="section-heading">Email</h1>
-                    <h4 class="section-subheading text-muted">abhihanda23@gmail.com</h4>
+                    <h4 class="section-subheading text-muted">jugaditime@gmail.com</h4>
                 </div>
             </div>
         </div>
@@ -482,20 +482,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
-                    <span class="copyright">Copyright &copy; GeckPro</span>
+                    <span class="copyright">Copyright &copy; JugadiTime</span>
                 </div>
-                <div class="col-md-4">
+                <!--div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <!li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
-                </div>
+                </div-->
                 <div class="col-md-4">
-                    <span class="copyright text-right">Designed & Developed by <a href="#">ThemesGeck</a></span>
+                    <span class="copyright text-right">Designed & Developed by JugadiTime</span>
                 </div>
             </div>
         </div>
