--- a/index.html
+++ b/index.html
@@ -484,16 +484,16 @@
                 <div class="col-md-4">
                     <span class="copyright">Copyright &copy; JugadiTime</span>
                 </div>
-                <!--div class="col-md-4">
-                    <ul class="list-inline social-buttons">
+                <div class="col-md-4">
+                   <!-- <ul class="list-inline social-buttons">
                         <!li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
                         <li><a href="#"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li><a href="#"><i class="fa fa-linkedin"></i></a>
                         </li>
-                    </ul>
-                </div-->
+                    </ul>-->
+                </div>
                 <div class="col-md-4">
                     <span class="copyright text-right">Designed & Developed by JugadiTime</span>
                 </div>
