--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                              <span class="words-wrapper waiting">
                                  <b class="is-visible">JugadiTime</b>
                                  <b>We're Affordable </b>
-                                 <b>We do our best to work </b>
+                                 <b>We do our best to work</b>
                                  <b>with your budget</b>
                              </span>
                          </h1>
@@ -115,7 +115,7 @@
 
 
     <!-- Services Section -->
-    <section id="services"> a
+    <section id="services"> 
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
