--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>JugadiTime</title>
-    <link rel="icon" href="img/logo-b.png">
+    <link rel="icon" href="favicon.ico">
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -106,7 +106,7 @@
                                  <b>with your budget</b>
                              </span>
                          </h1>
-                         <!--a href="#services" class="page-scroll btn btn-xl">Explore Services</a-->
+                         <a href="#services" class="page-scroll btn btn-xl">Explore Services</a>
                      </div>
                  </div>
              </div>
@@ -115,7 +115,7 @@
 
 
     <!-- Services Section -->
-    <section id="services"> a
+    <section id="services">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
@@ -163,7 +163,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h1 class="section-heading">Portfolio</h1>
-                    <h4 class="section-subheading text-muted">Here are all the projects made by us.</h4>
+                    <h4 class="section-subheading text-muted">Some of our projects.</h4>
                 </div>
             </div>
 
@@ -180,11 +180,12 @@
                     <div class="col-md-4 col-sm-6 mix web_design" data-myorder="1">
                         <figure class="wow zoomIn">
                             <img src="img/portfolio/anandep.png">
-                            <a href="#" data-toggle="modal" data-target="#portfolioModal">
+                            <!--<a href="#" data-toggle="modal" data-target="#portfolioModal">-->
+                            <a href="https://anandep.com/" target="blank">
                                 <figcaption>
                                     <div class="portfolio-icon"><i class="fa fa-search"></i></div>
-                                    <h4>Project 1</h4>
-                                    <p>Our websites are simply good!</p>
+                                    <h4>Anand Enterprises</h4>
+                                    <p>Manufacturers &amp; Exporters of Construction Machinery</p>
                                 </figcaption>
                             </a>
                         </figure>
@@ -193,11 +194,11 @@
                     <div class="col-md-4 col-sm-6 mix logo" data-myorder="2">
                         <figure class="wow zoomIn">
                             <img src="img/portfolio/shine.png">
-                            <a href="#" data-toggle="modal" data-target="#portfolioModal">
+                            <a href="http://shinecoachings.com/" target="blank">
                                 <figcaption>
                                     <div class="portfolio-icon"><i class="fa fa-search"></i></div>
-                                    <h4>Project 2</h4>
-                                    <p>Our websites are simply good!</p>
+                                    <h4>Shine</h4>
+                                    <p>A Sacret Heart institute with Aeon.</p>
                                 </figcaption>
                             </a>
                         </figure>
@@ -206,11 +207,11 @@
                     <div class="col-md-4 col-sm-6 mix illustration" data-myorder="3">
                         <figure class="wow zoomIn">
                             <img src="img/portfolio/aeon.png">
-                            <a href="#" data-toggle="modal" data-target="#portfolioModal">
+                            <a href="http://aeoneducreation.com/" target="blank">
                                 <figcaption>
                                     <div class="portfolio-icon"><i class="fa fa-search"></i></div>
-                                    <h4>Project 3</h4>
-                                    <p>Our websites are simply good!</p>
+                                    <h4>Aeon Educreation</h4>
+                                    <p>Aeon Educreation Pvt. Ltd.</p>
                                 </figcaption>
                             </a>
                         </figure>
