removed unneccessary content

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="We have experienced personnel in Django, Flask, Mezzanine, Wordpress, Drupal and other CMS based websites. We are also skilled in Single page applications, Android Development and Web Scraping.
+    Python, C++, Java, PHP, HTML5, CSS3, JavaScript and Bash Scripting are our forte.
+    We also lay out Linux and Database Administration.">
+    <meta name="author" content="Jagjeet Singh">
+    <meta name="keywords" content="Web Developers,Ludhiana,Punjab,Freelancers,Web,web Development,Company in Ludhiana,Wordpress Developers, Django Developers,Python,Django,Mezzanine,Wordpress,Drupal,PHP,Java,C++,HTML5,CSS3,JavaScript">
 
-    <title>JugadiTime</title>
+    <title>JugadiTime | Web Development company in Ludhiana, Punjab | Mobile Development | Linux Administration | Django Developers | CMS services | Wordpress Developers </title>
     <link rel="icon" href="favicon.ico">
 
     <!-- Bootstrap Core CSS -->
@@ -96,16 +99,16 @@
              <div class="row">
                  <div class="col-md-12 col-sm-12">
                      <div class="header-text text-center">
-                         <h4 class="header-lead-in">We find a low-cost solution to any problem in an intelligent way </h4>
-                         <h1 class="header-heading letters type">
+                         <h4 class="header-lead-in">We make your impression online
+                         </h4>
+                         <h2 class="header-heading letters type">
                              <span> </span>
                              <span class="words-wrapper waiting">
                                  <b class="is-visible">JugadiTime</b>
-                                 <b>We're Affordable </b>
-                                 <b>We do our best to work </b>
-                                 <b>with your budget</b>
+                                 <b>Once it is final</b>
+                                 <b>use it everywhere!</b>
                              </span>
-                         </h1>
+                         </h2>
                          <a href="#services" class="page-scroll btn btn-xl">Explore Services</a>
                      </div>
                  </div>
@@ -324,7 +327,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h1 class="section-heading">Who Keeps Trust on Us</h1>
-                    <h4 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h4>
+                    <h4 class="section-subheading text-muted">Having a true customer is like living in heaven.</h4>
                 </div>
             </div>
 
