--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     Python, C++, Java, PHP, HTML5, CSS3, JavaScript and Bash Scripting are our forte.
     We also lay out Linux and Database Administration.">
     <meta name="author" content="Jagjeet Singh">
-    <meta name="keywords" content="Web Developers,Ludhiana,Punjab,Freelancers,Web,web Development,Company in Ludhiana,Wordpress Developers, Django Developers,Python,Django,Mezzanine,Wordpress,Drupal,PHP,Java,C++,HTML5,CSS3,JavaScript">
+    <meta name="keywords" content="jugaditime,jugaditi.me,JugadiTime,Web Developers,Ludhiana,Punjab,Freelancers,Web,web Development,Company in Ludhiana,Wordpress Developers, Django Developers,Python,Django,Mezzanine,Wordpress,Drupal,PHP,Java,C++,HTML5,CSS3,JavaScript">
 
     <title>JugadiTime | Web Development company in Ludhiana, Punjab | Mobile Development | Linux Administration | Django Developers | CMS services | Wordpress Developers </title>
     <link rel="icon" href="favicon.ico">
