--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                                 <div class="team-social-icon">
                                     <!--a href="#"><i class="fa fa-twitter"></i></a-->
                                     <a href="https://www.facebook.com/iamjagjeetubhi"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/iamjagjeetubhi/"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </figcaption>
                         </a>
