updated linkedin link

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                                 <div class="team-social-icon">
                                     <!--a href="#"><i class="fa fa-twitter"></i></a-->
                                     <a href="https://www.facebook.com/amrit3701"><i class="fa fa-facebook"></i></a>
-                                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/amrit3701/"><i class="fa fa-linkedin"></i></a>
                                 </div>
                             </figcaption>
                         </a>
